[tool.poetry]
name = "claude-autocomplete-python"
version = "0.1.0"
description = "A Python PTY wrapper for Claude Code CLI with autocomplete support"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "claude_wrapper"}]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
mypy = "^1.5.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
claude-wrapper = "claude_wrapper:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
